# insurance-anam

./: README.md  pyproject.toml
notebooks/: anam_demo.py
src/insurance_anam/: __init__.py  api.py  feature_network.py  interaction_network.py  losses.py  model.py  shapes.py  trainer.py  utils.py
tests/: conftest.py  test_api.py  test_feature_network.py  test_interaction_network.py  test_losses.py  test_model.py  test_p0_bugs.py  test_shapes.py  test_trainer.py  test_utils.py
