[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "insurance-anam"
version = "0.1.0"
description = "Actuarial Neural Additive Model for insurance pricing — interpretable, monotone-constrained, with Poisson/Tweedie/Gamma distributional losses"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
    { name = "Burning Cost", email = "pricing.frontier@gmail.com" }
]
keywords = [
    "insurance",
    "pricing",
    "actuarial",
    "neural-additive-model",
    "interpretable-ml",
    "monotonicity",
    "poisson",
    "tweedie",
    "glm",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Office/Business :: Financial",
]
dependencies = [
    "torch>=2.0.0",
    "scikit-learn>=1.3.0",
    "polars>=0.20.0",
    "numpy>=1.24.0",
    "matplotlib>=3.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.0.0",
]

[project.urls]
Homepage = "https://github.com/burning-cost/insurance-anam"
Repository = "https://github.com/burning-cost/insurance-anam"
Issues = "https://github.com/burning-cost/insurance-anam/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/insurance_anam"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
